# notmuch-ai

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  pyrightconfig.json
config/: rules.example.yaml
docs/: backlog.md
notmuch_ai/: __init__.py  classify.py  cli.py  db.py  draft.py  llm.py  notmuch.py  rules.py  triage.py
tests/: conftest.py  test_classify.py  test_cli.py  test_db.py  test_live.py  test_llm.py  test_notmuch.py  test_rules.py  test_triage.py
